--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "palmiak/timber_acf_wp_blocks",
+    "name": "palmiak/timber-acf-wp-blocks",
     "description": "Create Gutenberg blocks from Twig templates and ACF fields.",
     "keywords": ["wordpress", "gutenberg", "advanced custom fields"],
     "require": {
@@ -21,5 +21,9 @@
     ],
     "autoload": {
         "files": ["timber-acf-wp-blocks.php"]
+    },
+    "require-dev": {
+        "wp-coding-standards/wpcs": "2.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "0.5.0"
     }
 }
