--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,6 @@ jobs:
     - name: "Create a folder"
       run: mkdir timber-acf-wp-blocks
     - name: "Move files"
-      run: mv * timber-acf-wp-blocks
+      run: |
+        shopt -s extglob
+        mv !(timber-acf-wp-blocks) timber-acf-wp-blocks
