--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
       run: |
         mkdir timber-acf-wp-blocks
         shopt -s extglob
-        mv *!(timber-acf-wp-blocks) timber-acf-wp-blocks
+        mv timber-acf-wp-blocks.php timber-acf-wp-blocks
