--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,8 @@
     "description": "Create Gutenberg blocks from Twig templates and ACF fields.",
     "keywords": ["wordpress", "gutenberg", "advanced custom fields"],
     "require": {
-        "php": ">=5.6",
-        "composer/installers": "^1.9"
+        "php": ">=5.6"
     },
-    "type": "wordpress-muplugin",
     "license": "MIT",
     "authors": [
         {
